force-app/main/default/objects/KimbleOne__InterfaceRunLine__c/KimbleOne__InterfaceRunLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Interface Run Line</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Run Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>