force-app/main/default/objects/KimbleOne__InterfaceRunLine__c/fields/KimbleOne__ExternalRequestId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalRequestId__c</fullName>
    <externalId>true</externalId>
    <label>External Request Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>