force-app/main/default/objects/KimbleOne__InterfaceRunLine__c/fields/KimbleOne__TransformedData__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TransformedData__c</fullName>
    <label>Transformed Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>