force-app/main/default/objects/KimbleOne__InterfaceRunLine__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__InterfaceRun__c</columns>
    <columns>KimbleOne__RawData__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>